k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote-api-service
spec:
  selector:
    app: quote-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
